--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,115 @@
-
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 .navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+html,
+body {
+    z-index: initial;
+    color: #fff;
+    font-family: "Nunito", sans-serif;
+    font-weight: 200;
+    height: 100vh;
+    margin: 0;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.title {
+    font-size: 134px;
+    text-shadow: slategrey;
+    padding: 0 15px;
+}
+
+.links>a {
+    color: #fff;
+    padding: 0 20px;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
+
+.background {
+    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544405555/Jizelle/Travel/IMG_2239.jpg");
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#walking-gallery,
+#travel-gallery,
+#about-me {
+    /* Full height */
+    height: 100%;
+    overflow: hidden;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    padding: 0 20px;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+
+
+}
+
+#walking-gallery {
+    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544404714/Jizelle/Travel/IMG_4359.jpg");
+}
+
+#travel-gallery {
+    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544404811/Jizelle/Travel/IMG_3979.jpg");
+}
+
+#about-me {
+    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544404718/Jizelle/Travel/IMG_4316.jpg");
+}
+
+// #walking-gallery:hover,
+// #travel-gallery:hover,
+// #about-me:hover {}
