added gallery component

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -66,8 +66,8 @@ body {
     margin-bottom: 30px;
 }
 
-.background {
-    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544405555/Jizelle/Travel/IMG_2239.jpg");
+.title-background {
+    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544921819/Jizelle/IMG_5314.jpg");
     /* Full height */
     height: 100%;
 
