--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,15 +7,40 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+// APP DEFAULT FONT COLOR
+$color: #fff;
+
+
 .navbar-laravel {
-    background-color: #fff;
+    position: absolute;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    z-index: 5;
+    width: 100vw
+}
+
+.navbar-brand {
+    text-shadow: slategrey;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: $color;
+    text-decoration: none;
+    cursor: crosshair;
 }
 
 html,
 body {
     z-index: initial;
-    color: #fff;
+    color: $color;
     font-family: "Nunito", sans-serif;
     font-weight: 200;
     height: 100vh;
@@ -36,6 +61,10 @@ body {
     position: relative;
 }
 
+.position-abs {
+    position: absolute;
+}
+
 .top-right {
     position: absolute;
     right: 10px;
@@ -48,18 +77,21 @@ body {
 
 .title {
     font-size: 134px;
-    text-shadow: slategrey;
-    padding: 0 15px;
+    margin: 0 auto;
 }
 
-.links>a {
-    color: #fff;
+.links {
+    color: $color;
     padding: 0 20px;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 700;
     letter-spacing: 0.1rem;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.links:hover {
+    text-decoration: none;
 }
 
 .m-b-md {
@@ -67,7 +99,7 @@ body {
 }
 
 .title-background {
-    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544921819/Jizelle/IMG_5314.jpg");
+    background-image: url("https://res.cloudinary.com/dgppfa9sm/image/upload/v1544405555/Jizelle/Travel/IMG_2239.jpg");
     /* Full height */
     height: 100%;
 
@@ -87,7 +119,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #fff;
+    color: $color;
     padding: 0 20px;
     font-size: 20px;
     font-weight: 600;
